# os-hse-hw-1

./: CMakeLists.txt  README.md  main.cpp
4/: 4.cpp
5/: 5.cpp
6/: 6.cpp
7/: 7.cpp
8/: 8_io.cpp  8_proc.cpp
9/: 9_io.cpp  9_proc.cpp
in/: 10.in  20.in  5.in  5000.in  gen.py
