cmake_minimum_required(VERSION 3.27)
project(OS_HSE)

set(CMAKE_CXX_STANDARD 20)

add_executable(OS_HSE main.cpp)

add_executable(4 4/4.cpp)

add_executable(5 5/5.cpp)

add_executable(6 6/6.cpp)

add_executable(7 7/7.cpp)

add_executable(8_io 8/8_io.cpp)
add_executable(8_proc 8/8_proc.cpp)

add_executable(9_io 9/9_io.cpp)
add_executable(9_proc 9/9_proc.cpp)

